; ModuleID = '/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_rpcc_php_close_connection.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_rpcc_php_close_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.TYPE_2__ = type { i32 (%struct.connection*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rpcc_php_close_connection(%struct.connection* %0, i32 %1) #0 {
  %3 = alloca %struct.connection*, align 8
  %4 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.connection*, %struct.connection** %3, align 8
  %6 = call %struct.TYPE_2__* @RPCC_FUNC(%struct.connection* %5)
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32 (%struct.connection*, i32)*, i32 (%struct.connection*, i32)** %7, align 8
  %9 = icmp ne i32 (%struct.connection*, i32)* %8, null
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load %struct.connection*, %struct.connection** %3, align 8
  %12 = call %struct.TYPE_2__* @RPCC_FUNC(%struct.connection* %11)
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.connection*, i32)*, i32 (%struct.connection*, i32)** %13, align 8
  %15 = load %struct.connection*, %struct.connection** %3, align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32 %14(%struct.connection* %15, i32 %16)
  br label %18

18:                                               ; preds = %10, %2
  %19 = load %struct.connection*, %struct.connection** %3, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @client_close_connection(%struct.connection* %19, i32 %20)
  ret i32 %21
}

declare dso_local %struct.TYPE_2__* @RPCC_FUNC(%struct.connection*) #1

declare dso_local i32 @client_close_connection(%struct.connection*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
